--- a/src/styles/pages/work.scss
+++ b/src/styles/pages/work.scss
@@ -23,8 +23,8 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		height: 100vh;
-		height: -webkit-fill-available;
+		// min-height: 100vh;
+		// height: -webkit-fill-available;
 		background-color: var(--color_background);
 		transform: translateY(100vh);
 		animation: intro_slide 0.6s ease-out forwards 0.6s;
@@ -36,6 +36,10 @@
 		height: 45vh;
 		width: 100%;
 		margin-top: 3rem;
+
+		@include small {
+			height: 35vh;
+		}
 
 		img {
 			width: 100%;
