--- a/src/styles/pages/work.scss
+++ b/src/styles/pages/work.scss
@@ -110,6 +110,47 @@
 			margin-top: calc(var(--title-margin) * 0.3);
 		}
 
+		ul, ol {
+			margin: calc(var(--title-margin) * 0.5) 0;
+			padding-left: 2rem;
+		}
+
+		ul {
+			list-style-type: disc;
+		}
+
+		ol {
+			list-style-type: decimal;
+		}
+
+		li {
+			margin: 0.5rem 0;
+			line-height: 160%;
+		}
+
+		code {
+			background-color: rgba(0, 0, 0, 0.05);
+			padding: 0.2rem 0.4rem;
+			border-radius: 4px;
+			font-family: 'Courier New', Courier, monospace;
+			font-size: 0.9em;
+		}
+
+		pre {
+			background-color: rgba(0, 0, 0, 0.05);
+			padding: 1.5rem;
+			border-radius: 8px;
+			overflow-x: auto;
+			margin: calc(var(--title-margin) * 0.5) 0;
+
+			code {
+				background-color: transparent;
+				padding: 0;
+				border-radius: 0;
+				font-size: 0.95rem;
+			}
+		}
+
 		a {
 			color: var(--color_typo);
 			// background-color: var(--color_main);
